--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@glidejs/glide": "^3.4.1",
     "animate.css": "^4.1.1",
+    "smooth-scroll": "^16.1.3",
     "swiper": "^7.0.3"
   }
 }
