--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@glidejs/glide": "^3.4.1",
     "animate.css": "^4.1.1",
     "smooth-scroll": "^16.1.3",
+    "sweetalert2": "^11.1.7",
     "swiper": "^7.0.3"
   }
 }
